[package]
name = "pregrind"
version = "1.0.0"
description = "Firescale's solana keygen util"
authors = ["Ozymandias <ozy@firescale.com>"]
repository = "https://github.com/fire-scale/pregrind.sol"
license = "MIT"
homepage = "https://pregrind.sol/"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
dirs-next = "2.0.0"
num_cpus = "1.13.1"
tiny-bip39 = "0.8.2"
solana-sdk = "1.14.13"
mongodb = "2.1"
tokio = "1"
serde = "1"

[[bin]]
name = "pregrind"
path = "src/program.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
